--- a/Exp no.2.ipynb
+++ b/Exp no.2.ipynb
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Name: Aabha D Lokhan\n",
-    "de\n",
+    "#Name: Aabha D Lokhande\n",
     "#Roll No: 46\n",
     "#Sec: A\n",
     "#Subject: Data Science\n",
